# EchoSynth

./: LICENSE  README.md  pyproject.toml
src/echo_synth/: main.py
src/echo_synth/crews/: __init__.py  audio_crew.py  email_crew.py  json_crew.py
src/echo_synth/crews/configs/agents/: audio_agents.yaml  json_agents.yaml
src/echo_synth/crews/configs/tasks/: audio_tasks.yaml  json_tasks.yaml
src/echo_synth/flows/: __init__.py  app_flow.py
src/echo_synth/tools/: __init__.py  audio_tools.py  image_tools.py
