[project]
name = "echo_synth"
version = "0.1.0"
description = "echo-synth using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
echo_synth = "echo_synth.main:run"
run_crew = "echo_synth.main:run"
train = "echo_synth.main:train"
replay = "echo_synth.main:replay"
test = "echo_synth.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
